INCLUDE_DIRECTORIES(${k3d_SOURCE_DIR})
INCLUDE_DIRECTORIES(${k3dsdk_BINARY_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

LINK_LIBRARIES(k3dsdk k3dsdk-qtui)

ADD_EXECUTABLE(test-convert convert.cpp)
K3D_TEST(qtui.convert TARGET test-convert REQUIRES K3D_BUILD_QTUI_MODULE LABELS qtui)
